--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,18 @@
   "version": "1.0",
   "content_scripts": [{
    "matches" : ["https://www.facebook.com/*"],
-   "js": ["emoji.js"]
+   "js": ["jquery.js", "emoji2.js"]
   }],
-  "web_accessible_resources": ["img/*"]
+  "web_accessible_resources": ["img/*"],
+  "browser_action": {
+    "default_icon": "img/emoji.png",
+    "default_popup": "popup.html"
+  },
+  "background":
+  {
+    "scripts": ["jquery.js"]
+  },
+  "permissions": [
+    "*://*.projectoxford.ai/*"
+  ]
 }
